@@ -3,6 +3,8 @@ PHP 4                                                                      NEWS
 ?? ??? 2006, Version 4.4.2
 - Backport missing imap_mailcompose fixes from 5.X. (Ilia)
 - Added missing safe_mode/open_basedir checks in cURL extension. (Ilia)
+- Fixed bug #35257 (Calling ob_flush after creating an ob callback causes 
+  segfault). (Tony)
 - Fixed bug #35078 (configure does not find ldap_start_tls_s). (Jani)
 - Fixed bug #35071 (Wrong fopen mode used in GD safe-mode checks). (Jani)
 - Fixed bug #35067, #35063 (key(),current() need to work by reference). (Ilia)
